--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -9,7 +9,7 @@
 
 \subtitle{A short story}
 
-\author[Arthur, Doe] % (optional, for multiple authors)
+\author[Sousa, Nuno] % (optional, for multiple authors)
 {A.~B.~Arthur\inst{1} \and J.~Doe\inst{2}}
 
 \institute[VFU] % (optional)
