--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -1,7 +1,8 @@
 \documentclass{beamer}
 
 \usepackage[utf8]{inputenc}
-
+\usetheme{Madrid}
+\usecolortheme{beaver}
 
 %Information to be included in the title page:
 \title[Amateur Telescope Making]
@@ -10,20 +11,10 @@
 \subtitle{A short story}
 
 \author[Sousa, Nuno] % (optional, for multiple authors)
-{A.~B.~Arthur\inst{1} \and J.~Doe\inst{2}}
+{Sousa, Nuno}
 
-\institute[VFU] % (optional)
-{
-  \inst{1}%
-  Faculty of Physics\\
-  Very Famous University
-  \and
-  \inst{2}%
-  Faculty of Chemistry\\
-  Very Famous University
-}
 
-\date[VLC 2013] % (optional)
+\date[2021] % (optional)
 {Very Large Conference, April 2013}
 
 
