Progressed presentation contents

--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -1,31 +1,57 @@
 \documentclass{beamer}
-
 \usepackage[utf8]{inputenc}
+\usepackage{hyperref}
+
 \usetheme{Madrid}
 \usecolortheme{beaver}
+\hypersetup{colorlinks=true, linkcolor=blue, filecolor=magenta, urlcolor=cyan}
+\urlstyle{same}
 
-%Information to be included in the title page:
-\title[Amateur Telescope Making]
-{About making a telescope at home}
-
-\subtitle{A short story}
-
-\author[Sousa, Nuno] % (optional, for multiple authors)
-{Sousa, Nuno}
-
-
-\date[2021] % (optional)
-{Very Large Conference, April 2013}
-
-
+\title{Amateur Telescope Making}
+\subtitle{Or how to make a telescope at home}
+\author{Nuno Miguel Sousa}
+\institute{Coimbra, Portugal}
+\date{\today}
 
 \begin{document}
 
-\frame{\titlepage}
+\begin{frame}
+\titlepage
+\end{frame}
 
 \begin{frame}
-\frametitle{Sample frame title}
-This is a text in the first frame. This is a text in the first frame. This is a text in the first frame.
+\frametitle{What is Amateur Telescope Making?}
+\begin{block}{}
+Amateur Telescope Making, or ATM, is a hobby taken by people that have an interest in astronomic observation and enjoy building telescopes\footnotemark.
+\end{block}
+\footnotetext{\url{https://en.wikipedia.org/wiki/Amateur_telescope_making}}
+\begin{block}{}
+ATM can range from just assembling the individualy bought components to actually fabricate some or all of the components of a telescope.
+\end{block}
+\begin{block}{}
+The most common type of telescope fabricated by hobbyists is the so called Newtonian reflector (invented by Sir Isaac Newton)\footnotemark.
+\end{block}
+\footnotetext{\url{https://en.wikipedia.org/wiki/Newtonian_telescope}}
+\end{frame}
+
+\begin{frame}
+\frametitle{Why build a telescope?}
+My name is Nuno and ...
+\end{frame}
+
+\begin{frame}
+\frametitle{My personal motivation for ATM}
+My name is Nuno and ...
+\end{frame}
+
+\begin{frame}
+\frametitle{About the author}
+My name is Nuno and ...
+\end{frame}
+
+\begin{frame}
+\frametitle{The end}
+Thank you!
 \end{frame}
 
 \end{document}
