--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -22,21 +22,24 @@
 \begin{frame}
 \frametitle{What is Amateur Telescope Making?}
 \begin{block}{}
-Amateur Telescope Making, or ATM, is a hobby taken by people that have an interest in astronomic observation and enjoy building telescopes\footnotemark.
+Amateur Telescope Making, or ATM, is a hobby taken by people that have an interest in astronomic observation and enjoy building telescopes.\footnotemark
 \end{block}
 \footnotetext{\url{https://en.wikipedia.org/wiki/Amateur_telescope_making}}
 \begin{block}{}
 ATM can range from just assembling the individualy bought components to actually fabricate some or all of the components of a telescope.
 \end{block}
 \begin{block}{}
-The most common type of telescope fabricated by hobbyists is the so called Newtonian reflector (invented by Sir Isaac Newton)\footnotemark.
+The most common type of telescope made by hobbyists is the so called Newtonian reflector (invented by Sir Isaac Newton).\footnotemark
 \end{block}
 \footnotetext{\url{https://en.wikipedia.org/wiki/Newtonian_telescope}}
 \end{frame}
 
 \begin{frame}
 \frametitle{Why build a telescope?}
-My name is Nuno and ...
+\begin{block}
+It is an attainable goal to produce by hand excelent quality optics, better than commercial optics on low end telescopes.\footnotemark
+\end{block}
+\footnotetext{\url{https://skyandtelescope.org/astronomy-resources/astronomy-questions-answers/are-machine-made-telescope-mirrors-better-than-those-made-my-hand/}}
 \end{frame}
 
 \begin{frame}
