--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -44,7 +44,7 @@ It is an attainable goal to produce by hand excelent quality optics, better than
 
 \begin{frame}
 \frametitle{My personal motivation for ATM}
-My name is Nuno and ...
+I always liked space and astronomy, but the tipping point to have a telescope myself was when once I was in the middle of rural alentejo late at night and had the first look at the milky way without any urban light pollution.
 \end{frame}
 
 \begin{frame}
