--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -8,7 +8,7 @@
 \urlstyle{same}
 
 \title{Amateur Telescope Making}
-\subtitle{Or how to make a telescope at home}
+\subtitle{...or how to make your own telescope at home}
 \author{Nuno Miguel Sousa}
 \institute{Coimbra, Portugal}
 \date{\today}
