--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -44,7 +44,8 @@ It is an attainable goal to produce by hand excelent quality optics, better than
 
 \begin{frame}
 \frametitle{My personal motivation for ATM}
-I always liked space and astronomy, but the tipping point to have a telescope myself was when once I was in the middle of rural alentejo late at night and had the first look at the milky way without any urban light pollution.
+Like many people, I find an interest in science in general. I never had a significative exposure to astronomy in particular but found it an interesting subject nonetheless.
+The tipping point to turn my attention to the night sky, was quite literaly, was when by chance I had the opportunity to look up at the night sky in the midle of rural Alentejo in southern Portugal. The combination of very low ligh polution and clear sky provided for a clear and beautiful view of the stars.
 \end{frame}
 
 \begin{frame}
