--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -26,7 +26,7 @@ Amateur Telescope Making, or ATM, is a hobby taken by people that have an intere
 \end{block}
 \footnotetext{\url{https://en.wikipedia.org/wiki/Amateur_telescope_making}}
 \begin{block}{}
-ATM can range from just assembling the individualy bought components to actually fabricate some or all of the components of a telescope.
+ATM can range from just assembling the individually bought components to actually fabricate some or all of the components of a telescope.
 \end{block}
 \begin{block}{}
 The most common type of telescope made by hobbyists is the so called Newtonian reflector (invented by Sir Isaac Newton).\footnotemark
@@ -36,16 +36,16 @@ The most common type of telescope made by hobbyists is the so called Newtonian r
 
 \begin{frame}
 \frametitle{Why build a telescope?}
-\begin{block}
-It is an attainable goal to produce by hand excelent quality optics, better than commercial optics on low end telescopes.\footnotemark
-\end{block}
-\footnotetext{\url{https://skyandtelescope.org/astronomy-resources/astronomy-questions-answers/are-machine-made-telescope-mirrors-better-than-those-made-my-hand/}}
+\begin{itemize}
+\item As with many hobbi
+It is an attainable goal to produce by hand excellent quality optics, better than commercial optics on low end telescopes.
+\end{itemize}
 \end{frame}
 
 \begin{frame}
 \frametitle{My personal motivation for ATM}
-Like many people, I find an interest in science in general. I never had a significative exposure to astronomy in particular but found it an interesting subject nonetheless.
-The tipping point to turn my attention to the night sky, was quite literaly, was when by chance I had the opportunity to look up at the night sky in the midle of rural Alentejo in southern Portugal. The combination of very low ligh polution and clear sky provided for a clear and beautiful view of the stars.
+I didn't have any significant exposure to astronomy in particular but found it an interesting subject nonetheless.
+The tipping point to turn my attention to the night sky, was when by chance I had the opportunity to look up at the night sky in the middle of rural Alentejo in southern Portugal. The combination of very low light pollution and clear sky provided for a clear and very distinctive view of the Milky Way.
 \end{frame}
 
 \begin{frame}
