Completed new frame.

--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -34,18 +34,35 @@ The most common type of telescope made by hobbyists is the so called Newtonian r
 \footnotetext{\url{https://en.wikipedia.org/wiki/Newtonian_telescope}}
 \end{frame}
 
-\begin{frame}
-\frametitle{Why build a telescope?}
-\begin{itemize}
-\item As with many hobbi
-It is an attainable goal to produce by hand excellent quality optics, better than commercial optics on low end telescopes.
-\end{itemize}
-\end{frame}
+%\begin{frame}
+%\frametitle{Why build a telescope?}
+%\begin{itemize}
+%\item Have a better understanding of how telescopes are built and how they work.
+%\item Knowing the 
+%\item Just for fun?
+%\end{itemize}
+%\end{frame}
 
 \begin{frame}
 \frametitle{My personal motivation for ATM}
-I didn't have any significant exposure to astronomy in particular but found it an interesting subject nonetheless.
-The tipping point to turn my attention to the night sky, was when by chance I had the opportunity to look up at the night sky in the middle of rural Alentejo in southern Portugal. The combination of very low light pollution and clear sky provided for a clear and very distinctive view of the Milky Way.
+\begin{columns}
+\column{0.6\textwidth}
+One time by chance a few years ago, I had the opportunity to look up at the night sky in Alentejo's countryside, in southern Portugal.
+
+The combination of very low light pollution and clear sky provided for a very distinctive view of the Milky Way.
+
+I had some interest in astronomy in general, but that event was what sparked the beggining of my interest in astronomical observation and ended up in deciding to build a telescope myself.
+\column{0.4\textwidth}
+\begin{figure}
+\includegraphics[scale=0.45]{assets/800px-Starry_Night_at_La_Silla.jpg}
+\caption{Not me!}
+\end{figure}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\frametitle{What I'm building.}
+My name is Nuno and ...
 \end{frame}
 
 \begin{frame}
