--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -61,7 +61,35 @@ I had some interest in astronomy in general, but that event was what sparked the
 \end{frame}
 
 \begin{frame}
-\frametitle{What I'm building.}
+\frametitle{The Newtonian Reflector telescope}
+\begin{figure}
+\includegraphics[scale=0.3]{assets/Newtonian_telescope2.pdf}
+\caption{Newtonian telescope}
+\end{figure}
+The main components of a Newtonian reflector telescope are the main mirror\footnotemark (right, blue),\footnotetext{\url{https://en.wikipedia.org/wiki/Primary_mirror}}
+the diagonal mirror (left, blue), and the eyepiece\footnotemark (opening at the top).
+\footnotetext{\url{https://en.wikipedia.org/wiki/Eyepiece}}
+
+Incoming light comes from the top of the telescope (left), iluminates the main mirror, and is reflected back to the eyepiece by the diagonal mirror.
+\end{frame}
+
+\begin{frame}
+\frametitle{My own telescope}
+I'm building a Newtonian reflector telescope and I'm making the main mirror myself.
+
+It has a 200mm diameter main mirror and a desired goal of a focal length of 1200mm.
+
+Reasons:
+\begin{itemize}
+\item It is the easiest type of telescope to make if one is also making the main optics.
+\item For a certain cost, it gets you the biggest size optics.
+\item A 200mm main mirror with 1200mm focal lenght is one of the most common configurations as a compromise between portability and light collection capability.
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Making the main mirror}
 My name is Nuno and ...
 \end{frame}
 
