--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -90,7 +90,12 @@ Reasons:
 
 \begin{frame}
 \frametitle{Making the main mirror}
-My name is Nuno and ...
+The process of mirror making is comprised of several steps.
+
+\begin{itemize}
+\item Coarse grinding to obtain an approximation of the desired curce
+\item Fine grinding...
+\end{itemize}
 \end{frame}
 
 \begin{frame}
