--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -84,6 +84,7 @@ Reasons:
 \item It is the easiest type of telescope to make if one is also making the main optics.
 \item For a certain cost, it gets you the biggest size optics.
 \item A 200mm main mirror with 1200mm focal lenght is one of the most common configurations as a compromise between portability and light collection capability.
+\item Provided you make your own tools, the mirror's optical quality will only be limited by your own time and pacience (or lack thereof).
 \end{itemize}
 \end{frame}
 
