--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -1,5 +1,6 @@
 \documentclass{beamer}
 \usepackage[utf8]{inputenc}
+\usepackage[labelformat = empty, labelsep = none]{caption}
 \usepackage{hyperref}
 
 \usetheme{Madrid}
@@ -61,20 +62,7 @@ I had some interest in astronomy in general, but that event was what sparked the
 \end{frame}
 
 \begin{frame}
-\frametitle{The Newtonian Reflector telescope}
-\begin{figure}
-\includegraphics[scale=0.3]{assets/Newtonian_telescope2.pdf}
-\caption{Newtonian telescope}
-\end{figure}
-The main components of a Newtonian reflector telescope are the main mirror\footnotemark (right, blue),\footnotetext{\url{https://en.wikipedia.org/wiki/Primary_mirror}}
-the diagonal mirror (left, blue), and the eyepiece\footnotemark (opening at the top).
-\footnotetext{\url{https://en.wikipedia.org/wiki/Eyepiece}}
-
-Incoming light comes from the top of the telescope (left), iluminates the main mirror, and is reflected back to the eyepiece by the diagonal mirror.
-\end{frame}
-
-\begin{frame}
-\frametitle{My own telescope}
+\frametitle{What I'm working on?}
 I'm building a Newtonian reflector telescope and I'm making the main mirror myself.
 
 It has a 200mm diameter main mirror and a desired goal of a focal length of 1200mm.
@@ -86,6 +74,19 @@ Reasons:
 \item A 200mm main mirror with 1200mm focal lenght is one of the most common configurations as a compromise between portability and light collection capability.
 \item Provided you make your own tools, the mirror's optical quality will only be limited by your own time and pacience (or lack thereof).
 \end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{The Newtonian Reflector telescope}
+\begin{figure}
+\includegraphics[scale=0.3]{assets/Newtonian_telescope2.pdf}
+\caption{Newtonian telescope}
+\end{figure}
+The main components of a Newtonian reflector telescope are the main mirror\footnotemark (right, blue),\footnotetext{\url{https://en.wikipedia.org/wiki/Primary_mirror}}
+the diagonal mirror (left, blue), and the eyepiece\footnotemark (opening at the top).
+\footnotetext{\url{https://en.wikipedia.org/wiki/Eyepiece}}
+
+Incoming light comes from the top of the telescope (left), iluminates the main mirror, and is reflected back to the eyepiece by the diagonal mirror.
 \end{frame}
 
 
