--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -14,6 +14,7 @@
 \institute{Coimbra, Portugal}
 \date{\today}
 
+
 \begin{document}
 
 \begin{frame}
@@ -35,15 +36,6 @@ The most common type of telescope made by hobbyists is the so called Newtonian r
 \footnotetext{\url{https://en.wikipedia.org/wiki/Newtonian_telescope}}
 \end{frame}
 
-%\begin{frame}
-%\frametitle{Why build a telescope?}
-%\begin{itemize}
-%\item Have a better understanding of how telescopes are built and how they work.
-%\item Knowing the 
-%\item Just for fun?
-%\end{itemize}
-%\end{frame}
-
 \begin{frame}
 \frametitle{My personal motivation for ATM}
 \begin{columns}
@@ -52,7 +44,9 @@ One time by chance a few years ago, I had the opportunity to look up at the nigh
 
 The combination of very low light pollution and clear sky provided for a very distinctive view of the Milky Way.
 
-I had some interest in astronomy in general, but that event was what sparked the beggining of my interest in astronomical observation and ended up in deciding to build a telescope myself.
+I had some interest in astronomy in general, but that event was what sparked the beggining of my interest in astronomical observation.
+
+Eventualy I found about ATM and ended up deciding to build a telescope myself because I found the challenge interesting.
 \column{0.4\textwidth}
 \begin{figure}
 \includegraphics[scale=0.45]{assets/800px-Starry_Night_at_La_Silla.jpg}
@@ -63,32 +57,35 @@ I had some interest in astronomy in general, but that event was what sparked the
 
 \begin{frame}
 \frametitle{What I'm working on?}
-I'm building a Newtonian reflector telescope and I'm making the main mirror myself.
+I'm building a Newtonian reflector telescope and I'm making the main mirror lens myself.
 
-It has a 200mm diameter main mirror and a desired goal of a focal length of 1200mm.
+It has a 200mm diameter main mirror and initially I planned for a focal length of 1200mm.
 
-Reasons:
+Why these characteristics?
 \begin{itemize}
-\item It is the easiest type of telescope to make if one is also making the main optics.
-\item For a certain cost, it gets you the biggest size optics.
-\item A 200mm main mirror with 1200mm focal lenght is one of the most common configurations as a compromise between portability and light collection capability.
-\item Provided you make your own tools, the mirror's optical quality will only be limited by your own time and pacience (or lack thereof).
+\item For a certain telescope diameter (aperture), it is the least complicated to make (only one convex main mirror lens and a small diagonal flat mirror).
+\item A 200mm main mirror with 1200mm focal lenght is one of the most common configurations. It is a compromise between portability and light collection capability.
+\item Provided you make some simple tools, the mirror's optical quality will only be limited by the amount of time you want to spend and pacience (or lack thereof).
 \end{itemize}
 \end{frame}
 
 \begin{frame}
 \frametitle{The Newtonian Reflector telescope}
 \begin{figure}
-\includegraphics[scale=0.3]{assets/Newtonian_telescope2.pdf}
+\includegraphics[scale=0.4]{assets/Newtontelescope.png}
 \caption{Newtonian telescope}
 \end{figure}
-The main components of a Newtonian reflector telescope are the main mirror\footnotemark (right, blue),\footnotetext{\url{https://en.wikipedia.org/wiki/Primary_mirror}}
-the diagonal mirror (left, blue), and the eyepiece\footnotemark (opening at the top).
+The main components of a Newtonian reflector telescope are the main concave mirror\footnotemark,\footnotetext{\url{https://en.wikipedia.org/wiki/Primary_mirror}}
+the diagonal flat mirror, and the eyepiece\footnotemark.
 \footnotetext{\url{https://en.wikipedia.org/wiki/Eyepiece}}
 
-Incoming light comes from the top of the telescope (left), iluminates the main mirror, and is reflected back to the eyepiece by the diagonal mirror.
+Incoming light (red dashed line) comes from the top of the telescope, iluminates the main mirror, and is reflected back to the eyepiece by the diagonal mirror.
 \end{frame}
 
+\begin{frame}
+\frametitle{Where to start?}
+My name is Nuno and ...
+\end{frame}
 
 \begin{frame}
 \frametitle{Making the main mirror}
