--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -83,18 +83,15 @@ Incoming light (red dashed line) comes from the top of the telescope, iluminates
 \end{frame}
 
 \begin{frame}
-\frametitle{Where to start?}
-My name is Nuno and ...
-\end{frame}
-
-\begin{frame}
 \frametitle{Making the main mirror}
-The process of mirror making is comprised of several steps.
+For the main mirror you need a circular disc of some type of glass with a concave face on it.
 
-\begin{itemize}
-\item Coarse grinding to obtain an approximation of the desired curce
-\item Fine grinding...
-\end{itemize}
+Simple, right?
+
+For an acceptale mirror, you will need a parabolic shaped surface that needs to have at most $0.15 \mu m$ of deviation from the theoretical ideal surface.
+
+How do you make such an imposible smooth surface? By hand, of course.
+
 \end{frame}
 
 \begin{frame}
