--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -94,6 +94,14 @@ How do you make such an imposible smooth surface? By hand, of course.
 
 \end{frame}
 
+
+\begin{frame}
+\frametitle{About the author}
+https://atm-workshop.com/foucault.html
+
+https://www.telescope-optics.net/foucault_test.htm
+\end{frame}
+
 \begin{frame}
 \frametitle{About the author}
 My name is Nuno and ...
