--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -63,7 +63,7 @@ It has a 200mm diameter main mirror and initially I planned for a focal length o
 
 Why these characteristics?
 \begin{itemize}
-\item For a certain telescope diameter (aperture), it is the least complicated to make (only one convex main mirror lens and a small diagonal flat mirror).
+\item For a certain telescope diameter (aperture), it is the least complicated type to make (only one convex main mirror lens and a small diagonal flat mirror).
 \item A 200mm main mirror with 1200mm focal lenght is one of the most common configurations. It is a compromise between portability and light collection capability.
 \item Provided you make some simple tools, the mirror's optical quality will only be limited by the amount of time you want to spend and pacience (or lack thereof).
 \end{itemize}
