--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -88,7 +88,7 @@ For the main mirror you need a circular disc of some type of glass with a concav
 
 Simple, right?
 
-For an acceptale mirror, you will need a parabolic shaped surface that needs to have at most $0.15 \mu m$ of deviation from the theoretical ideal surface.
+For an acceptale mirror, you will need a surface that needs to have at most $0.15 \mu m$ of deviation from the theoretical ideal surface. This ideal surface must be a paraboloid for correctly focus light rays comming from infinitly far away objects.
 
 How do you make such an imposible smooth surface? By hand, of course.
 
