--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -140,8 +140,27 @@ How does one make such smooth surface? It turns out it can be done with easily b
 \end{frame}
 
 \begin{frame}
-\frametitle{Surface grinding}
-Both 
+\frametitle{Mirror grinding}
+\begin{columns}
+\column{0.5\textwidth}
+bla bla
+\column{0.5\textwidth}
+\begin{figure}
+\includegraphics[scale=0.2]{assets/grinding.jpg}
+\end{figure}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\frametitle{Mirror polishing}
+\begin{columns}
+\column{0.5\textwidth}
+bla bla
+\column{0.5\textwidth}
+\begin{figure}
+\includegraphics[scale=0.2]{assets/grinding.jpg}
+\end{figure}
+\end{columns}
 \end{frame}
 
 
