Added new sections.

--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -158,7 +158,43 @@ bla bla
 bla bla
 \column{0.5\textwidth}
 \begin{figure}
-\includegraphics[scale=0.2]{assets/grinding.jpg}
+\includegraphics[scale=0.2]{assets/polishing.jpg}
+\end{figure}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\frametitle{Mirror testing}
+\begin{columns}
+\column{0.5\textwidth}
+bla bla
+\column{0.5\textwidth}
+\begin{figure}
+\includegraphics[scale=0.2]{assets/polishing.jpg}
+\end{figure}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\frametitle{Foucalt test}
+\begin{columns}
+\column{0.5\textwidth}
+bla bla
+\column{0.5\textwidth}
+\begin{figure}
+\includegraphics[scale=0.2]{assets/polishing.jpg}
+\end{figure}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\frametitle{Interferometry test}
+\begin{columns}
+\column{0.5\textwidth}
+bla bla
+\column{0.5\textwidth}
+\begin{figure}
+\includegraphics[scale=0.2]{assets/polishing.jpg}
 \end{figure}
 \end{columns}
 \end{frame}
