--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -176,7 +176,7 @@ bla bla
 \end{frame}
 
 \begin{frame}
-\frametitle{Foucalt test}
+\frametitle{Foucault test}
 \begin{columns}
 \column{0.5\textwidth}
 bla bla
@@ -192,6 +192,7 @@ bla bla
 \begin{columns}
 \column{0.5\textwidth}
 bla bla
+%http://rohr.aiax.de/Using%20a%20Bath%20-%20EN.pdf
 \column{0.5\textwidth}
 \begin{figure}
 \includegraphics[scale=0.2]{assets/polishing.jpg}
