--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -190,17 +190,18 @@ There are several tests that can be used with varying degrees of complexity and 
 \frametitle{Foucault test}
 \begin{columns}
 \column{0.5\textwidth}
-bla bla
+The Foucault test...
+
+%\footnotetext
+%https://atm-workshop.com/foucault.html
+%https://www.telescope-optics.net/foucault_test.htm
 \column{0.5\textwidth}
 \begin{figure}
-\includegraphics[scale=0.2]{assets/polishing.jpg}
+\includegraphics[scale=0.35]{assets/Foucault.jpg}
+Foucalt test capture during actual testing of the mirror. 
 \end{figure}
-\footnotetext{\url{https://en.wikipedia.org/wiki/Parabolic_reflector}}
-{\url{https://en.wikipedia.org/wiki/Parabolic_reflector}}
-%https://atm-workshop.com/foucault.html
-
-%https://www.telescope-optics.net/foucault_test.htm
 \end{columns}
+%{\url{https://en.wikipedia.org/wiki/Parabolic_reflector}}
 \end{frame}
 
 \begin{frame}
@@ -211,7 +212,7 @@ bla bla
 %http://rohr.aiax.de/Using%20a%20Bath%20-%20EN.pdf
 \column{0.5\textwidth}
 \begin{figure}
-\includegraphics[scale=0.2]{assets/polishing.jpg}
+\includegraphics[scale=0.3]{assets/bath.jpg}
 \end{figure}
 \end{columns}
 \end{frame}
