--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -230,7 +230,14 @@ When the mirror is done, what remains to be built is the Optical Tube Assembly (
 
 \begin{frame}
 \frametitle{About the author}
-My name is Nuno and I am passionate for
+My name is Nuno Sousa and I'm from Peniche, Portugal.
+
+I graduated in Electrical Engineering an have a general interest in science and astronomy.
+
+I was welcomed into the the Critical family 6 years ago and I've been working mainly in the aviation industry.
+
+I like science fiction, to build stuff, specially electronic circuits and of couse the telescope I was talking about.
+
 \begin{figure}
 \includegraphics[scale=0.3]{assets/self.jpg}
 \end{figure}
